# SpecForge-Distill

./: .gitignore  AGENTS.md  Dockerfile  README.md  distill  distill.ps1  pyproject.toml  verify_markdown.py
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0.1-REQUIREMENTS.md  v1.0.1-ROADMAP.md  v1.1.0-REQUIREMENTS.md  v1.1.0-ROADMAP.md
.planning/phases/01-extraction-and-provenance-foundation/: 01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md
.planning/phases/09-external-ai-enrichment/: 09-RESEARCH.md
.planning/research/: ARCHITECTURE.md  DEEP_DIVE_REQUIREMENTS.md  DEEP_DIVE_SYSMLV2_INCOSE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: BUILD.md  ENGINEERING_STANDARDS.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.2.1.md  RELEASE_NOTES_v1.2.2.md  TEST_IVV_VISION.md  TEST_SPEC.md  TROUBLESHOOTING.md  goals.md  req.md  vision.md
docs/audit_reports/: MILESTONE_v1.0.0_AUDIT.md
docs/demo/: README.md
research/: SpecForge-Distill Product Preparation Research.md  deep-research-report.md
scripts/: release_manifest.py  render_release_notes.py  run_local_dev.py
src/specforge_distill/: __init__.py  automation.py  batch.py  cli.py  normalize.py  pipeline.py  validation.py
src/specforge_distill.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_determinism.py  test_notes_and_strict.py  test_phase8_edge_cases.py  test_v1_acceptance_final.py  test_validation.py
tests/phase1/: test_ingest_and_quality.py  test_models_and_pipeline_utils.py  test_narrative_and_architecture_extraction.py  test_phase1_acceptance_suite.py  test_provenance_propagation.py  test_table_and_caption_extraction.py  test_taxonomy_loading_contract.py
tests/phase2/: test_requirement_modeling.py
tests/phase3/: test_cli_outputs.py  test_interop_hooks.py  test_manifest_writer.py  test_markdown_render.py  test_phase3_acceptance.py
tests/regression/: test_regression.py
tests/reliability/: test_docker.py  test_release_and_wrapper_contracts.py  test_stress_and_robustness.py  test_wrapper_and_fixture_contracts.py
(+90 files in other folders)
