[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specforge-distill"
version = "0.1.0"
description = "PDF spec distillation with provenance-aware extraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pypdf>=3.17,<7",
  "pdfplumber>=0.11,<0.12",
  "PyYAML>=6,<7",
  "pydantic>=2.0.0",
]

[project.scripts]
distill = "specforge_distill.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
