[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specforge-distill"
version = "1.1.0"
description = "PDF spec distillation with provenance-aware extraction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "SpecForge Team", email = "engineering@example.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "pypdf>=3.17,<7",
  "pdfplumber>=0.11,<0.12",
  "PyYAML>=6,<7",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
  "pyinstaller>=6.19,<7",
]

[project.urls]
Homepage = "https://github.com/raymondvaldes/SpecForge-Distill"
Repository = "https://github.com/raymondvaldes/SpecForge-Distill.git"

[project.scripts]
distill = "specforge_distill.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yml", "*.yaml", "*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
